; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_standby.c_InitRecoveryTransactionEnvironment.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_standby.c_InitRecoveryTransactionEnvironment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_7__ = type { i32, i32 }

@.str = private unnamed_addr constant [18 x i8] c"RecoveryLockLists\00", align 1
@HASH_ELEM = common dso_local global i32 0, align 4
@HASH_BLOBS = common dso_local global i32 0, align 4
@RecoveryLockLists = common dso_local global i32 0, align 4
@MyBackendId = common dso_local global i32 0, align 4
@STANDBY_INITIALIZED = common dso_local global i32 0, align 4
@standbyState = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InitRecoveryTransactionEnvironment() #0 {
  %1 = alloca %struct.TYPE_6__, align 4
  %2 = alloca %struct.TYPE_7__, align 4
  %3 = call i32 @memset(%struct.TYPE_7__* %2, i32 0, i32 8)
  %4 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 0
  store i32 4, i32* %4, align 4
  %5 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %2, i32 0, i32 1
  store i32 4, i32* %5, align 4
  %6 = load i32, i32* @HASH_ELEM, align 4
  %7 = load i32, i32* @HASH_BLOBS, align 4
  %8 = or i32 %6, %7
  %9 = call i32 @hash_create(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 64, %struct.TYPE_7__* %2, i32 %8)
  store i32 %9, i32* @RecoveryLockLists, align 4
  %10 = call i32 @SharedInvalBackendInit(i32 1)
  %11 = load i32, i32* @MyBackendId, align 4
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 1
  store i32 %11, i32* %12, align 4
  %13 = call i32 (...) @GetNextLocalTransactionId()
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  store i32 %13, i32* %14, align 4
  %15 = bitcast %struct.TYPE_6__* %1 to i64*
  %16 = load i64, i64* %15, align 4
  %17 = call i32 @VirtualXactLockTableInsert(i64 %16)
  %18 = load i32, i32* @STANDBY_INITIALIZED, align 4
  store i32 %18, i32* @standbyState, align 4
  ret void
}

declare dso_local i32 @memset(%struct.TYPE_7__*, i32, i32) #1

declare dso_local i32 @hash_create(i8*, i32, %struct.TYPE_7__*, i32) #1

declare dso_local i32 @SharedInvalBackendInit(i32) #1

declare dso_local i32 @GetNextLocalTransactionId(...) #1

declare dso_local i32 @VirtualXactLockTableInsert(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
